--- a/libft/makefile
+++ b/libft/makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: gpaez-ga <gpaez-ga@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/09/11 17:05:44 by gpaez-ga          #+#    #+#              #
+#    Updated: 2023/09/11 17:05:49 by gpaez-ga         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 LIB = ar rcs
 RM = rm -f
 
