--- a/libft/makefile
+++ b/libft/makefile
@@ -6,7 +6,7 @@
 #    By: gpaez-ga <gpaez-ga@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/11 17:05:44 by gpaez-ga          #+#    #+#              #
-#    Updated: 2023/09/11 17:05:49 by gpaez-ga         ###   ########.fr        #
+#    Updated: 2023/09/16 18:31:04 by gpaez-ga         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ ft_isprint.c ft_isascii.c ft_isalnum.c ft_memchr.c ft_memcpy.c\
 ft_memcmp.c ft_memmove.c ft_strchr.c ft_strdup.c ft_strlcat.c ft_strlcpy.c\
 ft_strncmp.c ft_toupper.c ft_tolower.c ft_strnstr.c ft_strrchr.c ft_calloc.c\
 ft_putchar_fd.c ft_putstr_fd.c ft_putnbr_fd.c ft_putendl_fd.c ft_substr.c\
-ft_strjoin.c ft_strtrim.c ft_strmapi.c ft_itoa.c ft_split.c 
+ft_strjoin.c ft_strtrim.c ft_strmapi.c ft_itoa.c ft_split.c ft_striteri.c
 OBJ = $(SRC:.c=.o)
 INCLUDE = libft.h
 
