--- a/libft/makefile
+++ b/libft/makefile
@@ -6,7 +6,7 @@
 #    By: gpaez-ga <gpaez-ga@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/11 17:05:44 by gpaez-ga          #+#    #+#              #
-#    Updated: 2023/09/16 18:31:04 by gpaez-ga         ###   ########.fr        #
+#    Updated: 2023/09/19 19:33:31 by gpaez-ga         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,19 +26,19 @@ ft_strjoin.c ft_strtrim.c ft_strmapi.c ft_itoa.c ft_split.c ft_striteri.c
 OBJ = $(SRC:.c=.o)
 INCLUDE = libft.h
 
-#BONUSSRC = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c\
+BONUSSRC = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c\
 ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c\
 ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c\
 
-#BONUSOBJ = $(BONUSSRC:.c=.o)
+BONUSOBJ = $(BONUSSRC:.c=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJ) $(INCLUDE)
 	$(LIB) $(NAME) $(OBJ)
 
-#bonus: $(OBJ) $(BONUSOBJ) $(INCLUDE)
-#	$(LIB) $(NAME) $(BONUSOBJ) $(OBJ)
+bonus: $(OBJ) $(BONUSOBJ) $(INCLUDE)
+	$(LIB) $(NAME) $(BONUSOBJ) $(OBJ)
 
 %.o: %.c
 	$(CC) $(CCFLAGS) -c -o $@ $<
