--- a/libft_copy/makefile
+++ b/libft_copy/makefile
@@ -6,7 +6,7 @@
 #    By: gpaez-ga <gpaez-ga@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/11 17:05:44 by gpaez-ga          #+#    #+#              #
-#    Updated: 2023/10/20 19:41:21 by gpaez-ga         ###   ########.fr        #
+#    Updated: 2023/10/20 20:02:02 by gpaez-ga         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,7 +23,9 @@ ft_memcmp.c ft_memmove.c ft_strchr.c ft_strdup.c ft_strlcat.c ft_strlcpy.c\
 ft_strncmp.c ft_toupper.c ft_tolower.c ft_strnstr.c ft_strrchr.c ft_calloc.c\
 ft_putchar_fd.c ft_putstr_fd.c ft_putnbr_fd.c ft_putendl_fd.c ft_substr.c\
 ft_strjoin.c ft_strtrim.c ft_strmapi.c ft_itoa.c ft_split.c ft_striteri.c\
-get_next_line.c ft_printf.c
+get_next_line.c ft_putnbr.c ft_putnbr_hexa.c ft_putnbr_u.c ft_putchar.c\
+ ft_putstr ft_putpointer.c ft_printf.c
+
 OBJ = $(SRC:.c=.o)
 INCLUDE = libft.h
 
