--- a/so_long/libft/makefile
+++ b/so_long/libft/makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: gpaez-ga <gpaez-ga@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/11 17:05:44 by gpaez-ga          #+#    #+#              #
-#    Updated: 2023/11/06 19:38:04 by gpaez-ga         ###   ########.fr        #
+#    Updated: 2023/11/08 19:53:58 by gpaez-ga         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
