--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: gpaez-ga <gpaez-ga@student.42malaga.com    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/11/21 19:56:02 by gpaez-ga          #+#    #+#              #
+#    Updated: 2023/11/21 19:56:03 by gpaez-ga         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 RM = rm -f
 
 CC = gcc
