--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -1,12 +1,12 @@
 NAME = 	so_long
-SRC  =  main.c  so_long.c create.c\
+SRC  =  main.c comps.c create.c checker.c moves.c\
 
 
 OBJS        = $(SRC:.c=.o)
 CC	        = gcc
 CFLAGS      = -Wall -Werror -Wextra
-GLFW_FLAGS  = -ldl -lglfw -lm
-#GLFW_FLAGS = -lglfw -L /Users/$(USER)/.brew/opt/glfw/lib/ -lm
+#GLFW_FLAGS  = -ldl -lglfw -lm
+GLFW_FLAGS = -lglfw -L /Users/$(USER)/.brew/opt/glfw/lib/ -lm
 MLX42_PATH  = ./MLX42
 LIBFT_PATH  = ./libft
 RM	        = rm -f
