--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
 		"string": "c",
 		"string_view": "c",
 		"push_swap.h": "c",
-		"stdio.h": "c"
+		"stdio.h": "c",
+		"random": "c",
+		"ratio": "c"
 	}
 }
